fix path not showing 20, fix target with calculating max every time

--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -100,10 +100,10 @@ label {
 }
 
 .algo-status, .algo-status-details {
-    font-size: 1.3rem;
+    font-size: 1rem;
     font-family: monospace;
 }
 
 .algo-status-details {
-    font-size: 1rem;
+    font-size: 0.8rem;
 }
